Bug 255836 - Fix Recovery OS check
Summary: Fix Recovery OS check
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Per Arne Vollan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-22 18:52 PDT by Per Arne Vollan
Modified: 2023-05-01 06:54 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Arne Vollan 2023-04-22 18:52:57 PDT
Fix Recovery OS check. Using getuid is not accurate.
Comment 1 Radar WebKit Bug Importer 2023-04-22 18:53:12 PDT
<rdar://problem/108415551>
Comment 2 Per Arne Vollan 2023-04-22 18:55:00 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13076
Comment 3 EWS 2023-05-01 06:54:21 PDT
Committed 263549@main (35e9da7ba14a): <https://commits.webkit.org/263549@main>

Reviewed commits have been landed. Closing PR #13076 and removing active labels.