Fix Recovery OS check https://bugs.webkit.org/show_bug.cgi?id=255836 rdar://108415551

Reviewed by Chris Dumez.

This patch was authored by Tuomas Karkkainen.

Fix Recovery OS check. Using getuid is not accurate.

* Source/WTF/wtf/spi/darwin/OSVariantSPI.h:
* Source/WebKit/UIProcess/mac/WebViewImpl.mm:
(WebKit::isInRecoveryOS):

Canonical link: https://commits.webkit.org/263549@main